--- a/courses/geom_modeling/index.html
+++ b/courses/geom_modeling/index.html
@@ -36,7 +36,7 @@ Geometric Modeling<br>
   <h3><hr>
     Time: Tuesdays 11:15 - 12:30,	Thursdays 11:15 - 12:30<br>
     Location: CS Building 140<br>
-    Instuctor: Evangelos Kalogerakis (<a href="mail:kalo@cs.umass.edu">kalo@cs.umass.edu</a>)<br>
+    Instuctor: Evangelos Kalogerakis (kalo AT cs DOT umass DOT edu)<br>
     Office hours: Tuesdays 12:30-2,	Thursdays 12:30-2<strong>; at other times, drop in or make an appointment</strong> (office CS250)<br>
     <u>Lecture notes, programming resources, and assignments are posted on the <a href="https://moodle.umass.edu/">UMass Moodle web site. </a></u><br>
     <br>
