--- a/courses/modeling_and_simulation/index.html
+++ b/courses/modeling_and_simulation/index.html
@@ -36,7 +36,7 @@ body {
     <hr>
     Time: Fridays 1:25-3:25pm<br>
     Location: CS 142<br>
-    Instuctor: Evangelos Kalogerakis (<a href="mail:kalo@cs.umass.edu">kalo@cs.umass.edu</a>)<br>
+    Instuctor: Evangelos Kalogerakis  (kalo AT cs DOT umass DOT edu)<br>
     Office hours: Mondays 3-4pm<br>
     <br>
     Lecture notes, programming resources, and assignments will be posted on the <a href="https://moodle.umass.edu/course/view.php?id=25116">UMass Moodle web site. </a><br>
