--- a/courses/shape_understanding/index.html
+++ b/courses/shape_understanding/index.html
@@ -33,7 +33,7 @@ body {
   <h3><hr>
     Time: Monday, 3:30-5:30pm<br>
     Location: 140 CS Bldg<br>
-    Instuctor: Evangelos Kalogerakis (<a href="mail:kalo@cs.umass.edu">kalo@cs.umass.edu</a>)<br>
+    Instuctor: Evangelos Kalogerakis (kalo AT cs DOT umass DOT edu)<br>
     Office hours: Thursday 2-3pm, office CS250<strong>; at other times, drop in or make an appointment</strong> <br>
     <hr>
   </h3>
