--- a/index.html
+++ b/index.html
@@ -1784,7 +1784,7 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
               </td>
             </tr>
             <tr valign="middle">
-              <td class="ptd" height="225" width="270" valign="middle"><a href="https://www.cs.cornell.edu/%7Esidch/projects/attribit/"><img
+              <td class="ptd" height="225" width="270" valign="middle"><a href="papers/attribit/index.html"><img
 
                     src="papers/AttribIT.png" alt="Image" width="300"></a></td>
               <td class="ptd" height="225" valign="middle">
@@ -1795,7 +1795,7 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
 
                           href="https://youtu.be/U_XfYzy2c9w?list=PL1U-zmoZcBllPJ8yG4vDGc_Cjvshero22">VIDEO</a>][<a
 
-                          href="https://www.cs.cornell.edu/%7Esidch/projects/attribit/">PAGE</a>]</i><span><br>
+                          href="papers/attribit/index.html">PAGE</a>]</i><span><br>
                       </span><em>Siddhartha Chaudhuri*, <span><strong>Evangelos
                           Kalogerakis*</strong></span><span>, Stephen Giguere, Thomas
                           Funkhouser</span></em><span><br>
