--- a/papers/SketchModeling/index.html
+++ b/papers/SketchModeling/index.html
@@ -27,7 +27,7 @@
 			<a href="https://people.cs.umass.edu/~ruiwang/">Rui Wang</a>
 		</p>
 		<p><em>Proceedings of the International Conference on 3D Vision (3DV) 2017</em></p>
-		<p><strong>Preprint: <a href="SketchModeling.pdf">[PDF]</a></strong></p>
+		<p><strong>Preprint: <a href="sketch_modeling.pdf">[PDF]</a></strong></p>
 	</div>
 	<img id="teaser" alt="teaser" src="SketchModeling_teaser.png">
 	<h2>Abstract</h2>
@@ -37,12 +37,12 @@
 	<h2>Paper</h2>
 	<table><tr>
 		<td>
-			<a href="SketchModeling.pdf">
+			<a href="sketch_modeling.pdf">
 				<img id="thumbnail" alt="paper thumbnail" src="SketchModeling_thumbnail.jpg">
 			</a>
 		</td>
 		<td>
-			&#x25BA;<a href="SketchModeling.pdf">SketchModeling.pdf</a>, 18 MB<br>
+			&#x25BA;<a href="sketch_modeling.pdf">SketchModeling.pdf</a>, 18 MB<br>
 			<br>
 			<p>
 				Zhaoliang Lun, Matheus Gadelha, Evangelos Kalogerakis, Subhransu Maji, Rui Wang<br>
@@ -63,14 +63,14 @@
 	</p>
 	<p>&#x25BA;<a href="Code.7z">Code.7z</a>, 4 MB</p>
 	<p>&#x25BA;<a href="https://github.com/happylun/SketchModeling">Fork me on GitHub.</a></p>
-	<h2>Data</h2>
+<!--	<h2>Data</h2>
 	<p id="text">
 		The following archives contain data for training / testing our algorithm. Please read the readme file in the codes for instructions on how to use them.
 	</p>
 	<p>&#x25BA;<a href="TestingData.7z">TestingData.7z</a>, 7 MB</p>
 	<p>&#x25BA;<a href="https://neghvar.cs.umass.edu/public_data/zhaoliang_lun_trainingdata.7z">TrainingData.7z</a>, 14 GB</p>
 	<p>&#x25BA;<a href="https://neghvar.cs.umass.edu/public_data/zhaoliang_lun_checkpoint.7z">Checkpoint.7z </a>, 12 GB</p>
-	<i><a href="download.txt">(Error in downloading the gigantic files?)</a></i>
+	<i><a href="download.txt">(Error in downloading the gigantic files?)</a></i>-->
  	<h2>Presentation</h2>
 	<p id="text">
 		The following files contain the slides presented in 3DV 2017 at Qingdao, China.
