--- a/index.html
+++ b/index.html
@@ -181,16 +181,19 @@ Associate Professor of Computer Science</strong><br>
                     UMass Amherst in 2012. He was a postdoctoral researcher at
                     Stanford University from 2010 to 2012. He obtained his PhD
                     from the University of Toronto in 2010. His <a href="degrees/KALOGERAKIS_PhD_THESIS.pdf">PhD thesis </a> introduced machine learning techniques for geometry processing.
-					  He has served as Area Chair multiple times in CVPR, ICCV, ECCV. He has also served on
-                  technical paper committees for SIGGRAPH,
-                  SIGGRAPH ASIA, Eurographics, and the Symposium on Geometry
-                  Processing. He  is an Associate Editor in the
+                    He has served as Area Chair multiple times in CVPR, ICCV, ECCV. He has also served on
+                    technical paper committees for SIGGRAPH,
+                    SIGGRAPH ASIA, Eurographics, and the Symposium on Geometry
+                    Processing. He  is an Associate Editor in the
                     Editorial Boards of IEEE Transactions on Pattern Analysis
                     and Machine Intelligence (TPAMI) and IEEE Transactions on
-                    Visualization &amp; Computer Graphics (TVCG). He is  co-chairing  <a href="https://eg2024.cyens.org.cy/">Eurographics 2024</a> (Full Papers). He was listed as one of the <a href="https://www.aminer.cn/ai2000/2021/cg">100 most cited computer graphics scholars</a> in the world between 2010-2020 by the Tsinghua's
-                    AMiner academic network.<br>
-                    <br>
-                  </p>
+                    Visualization &amp; Computer Graphics (TVCG). He is  co-chairing <a href="https://eg2024.cyens.org.cy/">Eurographics 2024</a> (Full Papers). He was listed as one of the <a href="https://www.aminer.cn/ai2000/2021/cg">100 most cited computer graphics scholars</a> in the world between 2010-2020 by the Tsinghua's
+                    AMiner academic network.</p>
+                  <p>
+					  <span class="importantnote">
+			      <strong> I am currently looking for MS, PhD, postdoc and intern students. If you are interested, please carefully read <a href="erc.html">here</a> first! </strong> 
+						  </span>
+				  </p>
                 </div>
               </td>
             </tr>
