--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Associate Professor of Computer Science</strong><br>
                     AMiner academic network.</p>
                   <p>
 					  <span class="importantnote">
-			      <strong> I am currently looking for MS, PhD, postdoc and intern students. If you are interested, please carefully read <a href="erc.html">here</a> first! </strong> 
+			      I am currently looking for MS/PhD, postdoc and intern students. If you are interested in working with me, please carefully read <a href="erc.html">here</a> first!
 						  </span>
 				  </p>
                 </div>
