--- a/erc.html
+++ b/erc.html
@@ -84,51 +84,15 @@ table {
           <!-- Main Wrapper Table with initial width set to 60opx -->
           <tbody>
             <tr> 
-              <!-- HTML Spacer row -->
-              <td style="font-size: 0; line-height: 0;" height="20"><table width="96%" align="left"  cellpadding="0" cellspacing="0">
-                  <tr>
-                    <td style="font-size: 0; line-height: 0;" height="20">&nbsp;</td>
-                  </tr>
-                </table></td>
-            </tr>
-            <tr> 
-              <!-- HTML IMAGE SPACER -->
-              <td style="font-size: 0; line-height: 0;" height="20"><table align="left"  cellpadding="0" cellspacing="0" >
-                  <tr>
-                    <td >&nbsp;</td>
-                  </tr>
-                </table></td>
-            </tr>
-            <tr> 
-              <!-- HTML Spacer row -->
-              <td style="font-size: 0; line-height: 0;" height="20"><table width="96%" align="left"  cellpadding="0" cellspacing="0">
-                  <tr>
-                    <td style="font-size: 0; line-height: 0;" height="20">&nbsp;</td>
-                  </tr>
-                </table></td>
-            </tr>
-            <tr> 
               <!-- Introduction area -->
               <td><table width="96%"  align="left" cellpadding="0" cellspacing="0">
                   <tr> 
                     <!-- row container for TITLE/EMAIL THEME -->
                     <td align="center" style="font-size: 24px; font-weight: 300; line-height: 2.5em; color: #929292; font-family: sans-serif;">ERC-funded MS, PhD, Postdoc, and Internship Positions in Vision+Graphics+AI</td>
-                  </tr>
-                  <tr> 
-                    <!-- row container for Tagline -->
-                    <td align="center" style="font-size: 16px; font-weight:300; color: #929292; font-family: sans-serif;"><strong>ERC Condolidator Grant:</strong>&nbsp;<em>NEURi3D - Learning to synthesize interactive 3D models</em></td>
-                  </tr>
-                  <tr>
-                    <td style="font-size: 0; line-height: 0;" height="20"><table width="96%" align="left"  cellpadding="0" cellspacing="0">
-                        <tr> 
-                          <!-- HTML Spacer row -->
-                          <td style="font-size: 0; line-height: 0;" height="20">&nbsp;</td>
-                        </tr>
-                      </table></td>
-                  </tr>
+                  </tr>                  
                   <tr> 
                     <!-- Row container for Intro/ Description -->
-                    <td align="left" style="font-size: 14px; font-style: normal; font-weight: 100; color: #929292; line-height: 1.8; text-align:justify; padding:10px 20px 0px 20px; font-family: sans-serif;"><p>I am excited to announce multiple openings for MS, PhD, postdoc, and internship positions, all funded by a 5-year ERC consolidator grant. The project, titled "NEURi3D - Learning to synthesize interactive 3D models," seeks to advance deep learning techniques for generating interactive 3D models and scenes as well as intelligently processing 3D/4D scans and video. Led by <a href="https://kalo-ai.github.io/">Evangelos Kalogerakis</a>, the grant will be hosted at the <a href="https://www.tuc.gr/en/home">Technical University of Crete</a>, Greece, commencing in October 2024. Remote supervision options are also available, as detailed below. I encourage applications from candidates worldwide, irrespective of cultural background – knowledge of Greek language is *not* required. </p>
+                    <td align="left" style="font-size: 14px; font-style: normal; font-weight: 100; color: #929292; line-height: 1.8; text-align:justify; padding:10px 20px 0px 20px; font-family: sans-serif;"><p>I am excited to announce multiple openings for MS, PhD, postdoc, and internship positions, all funded by a 5-year <a href="https://erc.europa.eu/news-events/news/erc-2023-consolidator-grants-results">ERC consolidator grant</a>. The project, titled "NEURi3D - Learning to synthesize interactive 3D models," seeks to advance deep learning techniques for generating interactive 3D models and scenes as well as intelligently processing 3D/4D scans and video. Led by <a href="https://kalo-ai.github.io/">Evangelos Kalogerakis</a>, the grant will be hosted at the <a href="https://www.tuc.gr/en/home">Technical University of Crete</a>, Greece, commencing in October 2024. Remote supervision options are also available, as detailed below. I encourage applications from candidates worldwide, irrespective of cultural background – knowledge of Greek language is *not* required. </p>
                       <p><strong style="font-style: normal; font-size: 16px;"> Job Openings &amp; Qualifications</strong><br>
                         <strong> a) Postdoctoral Researchers:</strong> I am seeking self-motivated early-career researchers who have recently completed or are on the brink of completing their PhD and are eager to advance their research in the aforementioned topics. To apply, please email "kalogerakis [AT] gmail [DOT] com" with the subject line "Application for ERC-funded Postdoc Position", attaching the following documents in English: <br>
                         (i) Curriculum vitae detailing previous academic/industry roles, accomplishments, and publications. <br>
@@ -143,12 +107,15 @@ table {
                       (iv) Contact information (email addresses) of at least two faculty members or senior researchers willing to provide reference letters. <br>
                       <em>Minimum requirements include undergraduate and graduate GPAs above 85% (or 8.5 on a 10-point scale), strong programming skills in Python, and a keen interest in the project's focus areas.&nbsp;</em></p>
                       <p><strong>c) Interns:</strong> I am also looking for fall, spring, or summer interns who are currently pursuing a MS/PhD degree and are excited to work on any of the project topics in a short-term arrangement. To apply, please email "kalogerakis [AT] gmail [DOT] com" with the subject line "Application for ERC-funded internship" attaching the following documents in English: <br>
-                      (i) Curriculum vitae detailing previous academic/industry roles, achievements, and any publications. <br>
-                      (ii) Research statement outlining short-term research goals and any prior research experience. <br>
-                      (iii) Transcripts and copies of degrees from undergraduate and any current studies. <br>
-                      (iv) Contact information (email addresses) of at least one faculty member or senior researcher willing to provide a reference letter. <br>
-                      <em>Minimum requirements include undergraduate and graduate GPAs above 85% (or 8.5 on a 10-point scale), strong programming skills in Python, and a keen interest in the project's focus areas. &nbsp;</em></p>
-                      <p><strong style="font-style: normal; font-size: 16px;">Job Expectations &amp; Requirements</strong> <br>
+                        (i) Curriculum vitae detailing previous academic/industry roles, achievements, and any publications. <br>
+                        (ii) Research statement outlining short-term research goals and any prior research experience. <br>
+                        (iii) Transcripts and copies of degrees from undergraduate and any current studies. <br>
+                        (iv) Contact information (email addresses) of at least one faculty member or senior researcher willing to provide a reference letter. <br>
+  <em>Minimum requirements include undergraduate and graduate GPAs above 85% (or 8.5 on a 10-point scale), strong programming skills in Python, and a keen interest in the project's focus areas.&nbsp;</em></p>
+                      <span style="color: #8C0003">
+                        <p>Note: I am currently not accepting new students at UMass Amherst. All above positions will be funded through the ERC grant, with the Technical University of Crete serving as the hosting institution. &nbsp; &nbsp;</p>
+                      </span>
+<p><strong style="font-style: normal; font-size: 16px;">Job Expectations &amp; Requirements</strong> <br>
                       All postdocs/MS/PhD/intern students are expected to engage in cutting-edge research in machine learning, vision, and graphics; develop and implement novel algorithms and techniques; collaborate with peers; participate in research meetings; communicate effectively in English; prepare presentations, video demos, and scholarly papers; and publish in top-tier venues, such as <em>CVPR/ICCV/ECCV, SIGGRAPH/SIGGRAPH ASIA/TOG, NIPS/ICML/ICLR</em>. Students will have access to state-of-the-art deep learning servers equipped with tens of GPUs, which will be bought under the grant. &nbsp;</p>
                       <p><strong style="font-size: 16px">Other Position Details</strong>&nbsp;<br>
                          Candidates may specify in their application their preference over “in-person” or “remote” supervision options: <br>
