--- a/index.html
+++ b/index.html
@@ -191,7 +191,9 @@ Associate Professor of Computer Science</strong><br>
                     AMiner academic network.</p>
                   <p>
 					  <span class="importantnote">
-			      I am currently looking for MS/PhD, postdoc and intern students. If you are interested in working with me, please carefully read <a href="erc.html">here</a> first before contacting me!
+			      <strong>
+					If you are interested in applying to work with me, please first read  <a href="erc.html">here</a> before reaching out to me!
+				  </strong>
 						  </span>
 				  </p>
                 </div>
