--- a/index.html
+++ b/index.html
@@ -2455,12 +2455,12 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
             <tr>
               <td>
                 <p> <b> Current students:</b> <br>
-				  <a href="https://lodurality.github.io/">Dmitry Petrov</a> (PhD) <br>                  
-                  <a href="https://marios2019.github.io/">Marios Louizou&nbsp;</a>(PhD, co-supervised with Melinos Averkiou at CYENS, Cyprus) <br>
-				  Pradyumn Goyal (MS/PhD)<br>                  
-				  <a href="https://ngoductuanlhp.github.io/">Tuan Duc Ngo</a> (MS/PhD)<br>				
+				  <a href="https://lodurality.github.io/">Dmitry Petrov</a> (PhD)<br>                  
+                  <a href="https://marios2019.github.io/">Marios Louizou&nbsp</a> (PhD, co-supervised with Melinos Averkiou at CYENS, Cyprus) <br>
+				  <a href="https://prady1272.github.io/">Pradyumn Goyal</a> (MS/PhD)<br>                  
+				  <a href="https://ngoductuanlhp.github.io/">Tuan Duc Ngo</a> (MS/PhD)<br>
 				  <a href="https://vikastmz.github.io/">Vikas Thamizharasan</a> (PhD)<br>
-				  <a href="https://www.cyens.org.cy/en-gb/research/pillars-groups/visual-sciences/vcg/people/yiangos-georgiou/">Yiangos Georgiou&nbsp;</a>(PhD, co-supervised with Melinos Averkiou at CYENS, Cyprus) <br>                  
+				  <a href="https://www.cyens.org.cy/en-gb/research/pillars-groups/visual-sciences/vcg/people/yiangos-georgiou/">Yiangos Georgiou</a> (PhD, co-supervised with Melinos Averkiou at CYENS, Cyprus) <br>                  
 				
 				  <br>
                   <strong> Graduated:</strong><br>
