--- a/erc.html
+++ b/erc.html
@@ -113,7 +113,7 @@ table {
                         (iv) Contact information (email addresses) of at least one faculty member or senior researcher willing to provide a reference letter. <br>
   <em>Minimum requirements include undergraduate and graduate GPAs above 85% (or 8.5 on a 10-point scale), strong programming skills in Python, and a keen interest in the project's focus areas.&nbsp;</em></p>
                       <span style="color: #8C0003">
-                        <p>Note: I am currently not accepting new students at UMass Amherst. All above positions will be funded through the ERC grant, with the Technical University of Crete serving as the hosting institution. &nbsp; &nbsp;</p>
+                        <p>Note: I am not accepting new students, postdocs, or interns at UMass Amherst. All above positions are funded through the ERC grant and are hosted by the Technical University of Crete. Additionally, I will soon be transitioning to a new tenured faculty position at the Technical University of Crete. </p>
                       </span>
 <p><strong style="font-style: normal; font-size: 16px;">Job Expectations &amp; Requirements</strong> <br>
                       All postdocs/MS/PhD/intern students are expected to engage in cutting-edge research in machine learning, vision, and graphics; develop and implement novel algorithms and techniques; collaborate with peers; participate in research meetings; communicate effectively in English; prepare presentations, video demos, and scholarly papers; and publish in top-tier venues, such as <em>CVPR/ICCV/ECCV, SIGGRAPH/SIGGRAPH ASIA/TOG, NIPS/ICML/ICLR</em>. Students will have access to state-of-the-art deep learning servers equipped with tens of GPUs, which will be bought under the grant. &nbsp;</p>
