--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ body {
 	font-size: small;
 }
 .importantnote {
-	color: #C00;
+	color: #D70404;
 }
 #footer {
 	CLEAR: both;
@@ -135,7 +135,7 @@ DIV.abstract LI {
 	MARGIN-LEFT: 0px;
 	LIST-STYLE-TYPE: none
 }
-</style> 
+    </style> 
 </head>
   <body>
     <center>
@@ -235,9 +235,9 @@ Associate Professor of Computer Science</strong><br>
                 <div align="justify">
                   <p> <b>VecFusion: Vector Font Generation with Diffusion</b><br>
 <em>[<a href="https://arxiv.org/pdf/2312.10540.pdf">PAPER</a>][PROJECT PAGE TO APPEAR SOON] </em><br>	
-<i><span class="student-color">Vikas Thamizharasan</span>, Difan Liu, Shantanu Agarwal, Matthew Fisher, Michael Gharbi, Oliver Wang, Alec Jacobson, Evangelos Kalogerakis</i>					
-                    <br>
-                    <i>Proceedings of the Computer Vision and Pattern Recognition (CVPR) 2024</i><br>
+<i><span class="student-color">Vikas Thamizharasan*</span>, Difan Liu*, Shantanu Agarwal, Matthew Fisher, Michael Gharbi, Oliver Wang, Alec Jacobson, Evangelos Kalogerakis</i><br>
+(* indicates equal contribution)&nbsp;                    <br>
+                    <i>Proceedings of the Computer Vision and Pattern Recognition (CVPR) 2024<span class="importantnote">&nbsp;(Selected as highlight)</span></i><br>
 					  
                     <span class="styleAbstract"><br>
                         <em>Abstract: </em>We present VecFusion, a new neural architecture that can generate vector   fonts with varying topological structures and precise control point   positions. Our approach is a cascaded diffusion model which consists of a   raster diffusion model followed by a vector diffusion model. The raster   model generates low-resolution, rasterized fonts with auxiliary control   point information, capturing the global style and shape of the font,   while the vector model synthesizes vector fonts conditioned on the   low-resolution raster fonts from the first stage. To synthesize long and   complex curves, our vector diffusion model uses a transformer   architecture and a novel vector representation that enables the modeling   of diverse vector geometry and the precise prediction of control   points. Our experiments show that, in contrast to previous generative   models for vector graphics, our new cascaded vector diffusion model   generates higher quality vector fonts, with complex structures and   diverse styles. </span> </p>
@@ -268,7 +268,9 @@ Associate Professor of Computer Science</strong><br>
                 <div align="justify">
                   <p> <b>Open3DIS: Open-vocabulary 3D Instance Segmentation with 2D Mask Guidance</b><br>
 <em>[<a href="https://arxiv.org/pdf/2312.10671.pdf">PAPER</a>]&nbsp;[<a href="https://open3dis.github.io/">PAGE WITH CODE &amp; DATA</a>] </em><br>	
-<i>Phuc Nguyen, <span class="student-color">Tuan Duc Ngo</span>, Chuang Gan, Evangelos Kalogerakis, Anh Tran, Cuong Pham, Khoi Nguyen</i>				
+<i>Phuc Nguyen*, <span class="student-color">Tuan Duc Ngo*</span>, Evangelos Kalogerakis, Chuang Gan, Anh Tran, Cuong Pham, Khoi Nguyen<br>
+(* indicates equal contribution) <br>
+</i>				
                     <br>
                     <i>Proceedings of the Computer Vision and Pattern Recognition (CVPR) 2024</i><br>
 					  
@@ -304,8 +306,9 @@ We present ANISE, a method that reconstructs a 3D shape from partial observation
                 <div align="justify">
                   <p> <b>Cross-Shape Attention for Part Segmentation of 3D Point Clouds</b><br>
 <em>[<a href="https://arxiv.org/pdf/2003.09053.pdf">PAPER</a>]&nbsp;[<a href="https://marios2019.github.io/CSN/">PAGE WITH CODE &amp; DATA</a>] </em><br>
-                    <i><span class="student-color">Marios Loizou</span>, Siddhant Garg,  <span class="student-color">Dmitry Petrov</span>, Melinos Averkiou, Evangelos Kalogerakis </i>				
-                    <br>					  				  
+                    <i><span class="student-color">Marios Loizou*</span>, Siddhant Garg*,  <span class="student-color">Dmitry Petrov*</span>, Melinos Averkiou, Evangelos Kalogerakis </i>				
+                    <br>					 
+					  (* indicates equal contribution)<br>
                     <i>Computer Graphics Forum, vol. 42, no. 5</i><br>
 					  <i>(also in the Proceedings of SGP 2023)</i><br>
                     <a href="https://paperswithcode.com/sota/3d-semantic-segmentation-on-partnet?p=cross-shape-graph-convolutional-networks"><img src="papers/paperswithcode-CSN.png"  height="25" alt="Papers with Code -- Leaderboard"/></a><br>
@@ -521,7 +524,7 @@ varying the choice of geometric primitives and downstream tasks to demonstrate t
                     Andreou, Siddhartha Chaudhuri, Evangelos Kalogerakis</i>
                     <br>
                     <i>Proceedings of the International Conference on
-                    Computer Vision (ICCV) 2021 </i> <i><span class="importantnote">(Oral
+                    Computer Vision (ICCV) 2021 </i> <i><span class="importantnote">(Selected for Oral
                           Presentation)</span></i><br>
                     <span class="styleAbstract"><br>
                         <em>Abstract: </em>We introduce BuildingNet:
@@ -874,11 +877,11 @@ Proceedings of the European Conference on Computer
                         Articulated Models via Volumetric Nets</strong><br>
                       </span><i>[</i><span><i><a href="papers/AnimationSkeletons/AnimSkelVolNet.pdf">PAPER</a>]
                           [<a href="https://people.cs.umass.edu/%7Ezhanxu/projects/AnimSkelVolNet/">PAGE
-                            WITH CODE &amp; DATA</a>]</i></span> <i><span class="importantnote">(Oral
-                          Presentation)</span></i><span><br>
+                            WITH CODE &amp; DATA</a>]</i></span> <i><br>
                       </span><span><em><span class="student-color">Zhan Xu</span>, <span class="student-color">Yang Zhou</span>, Evangelos Kalogerakis, Karan Singh</em><br>
                       </span><i>Proceedings of the
-                        International Conference on 3D Vision (3DV) 2019<span><br>
+                        International Conference on 3D Vision (3DV) 2019<span class="importantnote">&nbsp;(Selected for Oral
+                          Presentation)</span></i><span><span><br>
                         </span></i><span class="styleAbstract"><br>
                         <em>Abstract: </em> We present a learning
                       method for predicting animation skeletons for input 3D
@@ -909,12 +912,12 @@ Proceedings of the European Conference on Computer
                   <p><span><strong>Learning Point Embeddings from Shape
                         Repositories for Few-Shot Segmentation</strong><br>
                       </span><i>[</i><span><i><a href="papers/more/PEN.pdf">PAPER</a>]</i></span>
-                      <span> </span><i><span class="importantnote">(Oral
-                          Presentation)</span></i><span><br>
+                      <i><span class="importantnote">&nbsp;</span></i><span><br>
                       </span><span><em><span class="student-color">Gopal Sharma</span>, Evangelos Kalogerakis,
                           Subhransu Maji</em><br>
                       </span><i>Proceedings of the International Conference on
-                        3D Vision (3DV) 2019</i><i><span><br>
+                        3D Vision (3DV) 2019<span class="importantnote">&nbsp;(Selected for Oral
+                          Presentation)</span></i><span></i><i><span><br>
                         </span></i><span class="styleAbstract"><br>
                         <em>Abstract: </em> User generated 3D shapes
                       in online repositories contain rich information about
@@ -1097,7 +1100,7 @@ Proceedings of the European Conference on Computer
                           Yang, Jan Kautz</em><br>
                       </span><i>Proceedings of the Computer Vision and Pattern
                         Recognition (CVPR) 2018</i> <i><span class="importantnote">(Oral
-                          Presentation + Best paper honorable mention award)</span></i><i><span><br>
+                          Presentation + <strong>Best paper honorable mention award</strong>)</span></i><i><span><br>
                         </span></i><span class="styleAbstract"><br>
                         <em>Abstract: </em>We present a network
                       architecture for processing point clouds that directly
@@ -1231,7 +1234,7 @@ Proceedings of the European Conference on Computer
                         </span>Proceedings of the International Conference on
                         Computer Vision (ICCV) 2017 </i> <i><span
 
-                          class="importantnote">(Spotlight Presentation)</span></i><i><span><br>
+                          class="importantnote">(Selected for Spotlight Presentation)</span></i><i><span><br>
                         </span></i><span class="styleAbstract"><br>
                         <em>Abstract: </em>We propose a data-driven
                       method for recovering missing parts of 3D shapes. Our
@@ -1276,7 +1279,7 @@ Proceedings of the European Conference on Computer
 Proceedings of the International Conference on 3D
                         Vision (3DV) 2017</i> <i><span
 
-                          class="importantnote">(Oral Presentation)</span></i><i><span><br>
+                          class="importantnote">(Selected for Oral Presentation)</span></i><i><span><br>
                         </span></i><span class="styleAbstract"><br>
                         <em>Abstract: </em>We propose a method for
                       reconstructing 3D shapes from 2D sketches in the form of
@@ -1355,7 +1358,7 @@ Proceedings of the International Conference on 3D
                         </span>Proceedings of the Computer Vision and Pattern
                         Recognition (CVPR) 2017<span> </span></i> <i><span
 
-                          class="importantnote">(Oral Presentation)</span></i><i><span><br>
+                          class="importantnote">(Selected for&nbsp; Oral Presentation)</span></i><i><span><br>
                         </span></i><span class="styleAbstract"><br>
                         <em>Abstract: </em>This paper introduces a
                       deep architecture for segmenting 3D objects into their
@@ -2058,7 +2061,7 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
                         Alexei Efros, Aaron Hertzmann</em><br>
                       </span><i><span>Proceedings of the
                           International Conference on Computer Vision (ICCV)
-                          2009 </span></i> <i><span class="importantnote">(Oral
+                          2009 </span></i> <i><span class="importantnote">(Selected for Oral
                           Presentation)</span></i><br>
                     <br>
                     <span class="styleAbstract"> <em>Abstract: </em><em>This
