--- a/courses/game_programming/index.html
+++ b/courses/game_programming/index.html
@@ -45,14 +45,13 @@ body {
   <span style="color: #1200B4">Evangelos Kalogerakis (kalo AT cs DOT umass DOT edu) </span> <br><br>
 
   Location:<br>
-  <span style="color: #1200B4">Engineering Lab II Room 119</span> <br>
-  <span style="color: #FF0004"> Students can also join remotely - check Moodle for zoom link</span> <br><br>
+  <span style="color: #FF0004"> Online -- students join remotely (check Moodle for zoom link)</span> <br><br>
 
   TAs: <br>
-    <span style="color: #1200B4">Dmitry Petrov, Pradyumn Goyal, Vikas Thamizharasan</span> <br><br>  
+    <span style="color: #1200B4">Dmitry Petrov, Pradyumn Goyal, Tuan Ngo</span> <br><br>  
   
   Meeting times: <br>
-    <span style="color: #1200B4">Mondays + Wednesdays 5:30-6:45pm ET</span> <br><br>
+    <span style="color: #1200B4">Tuesdays + Thursdays 8:30-9:45am ET</span> <br><br>
     
   Remote Instructor and TA office hours: <br>
   <span style="color: #FF0004">Check Moodle for zoom link, office hours, and Piazza link for asynchronous discussions </span>  
@@ -67,7 +66,7 @@ body {
   <p>The course has the following prerequisites for junior and senior CS majors: *MATH 235 (C or better)* and *COMPSCI 220 (C or better)* and *COMPSCI 311 (C or better) or COMPSCI 250 (B+ or better)*.  MS/PhD students are assumed to have these equivalents from their undergraduate career. The course offers 3 credits. </p>
 
   <h2>Class plan</h2>
-Lecture material will be pre-recorded and available asynchronousy. Course work can be done asychronouly. Students can join in-person or watch live lectures over zoom (attendance is optional). There will be  office hours with the instructor and the TAs remotely over zoom. Zoom links, lecture notes, recorded videos, programming resources, and assignments are posted on Moodle. Piazza will be used for asynchronous Q &amp; A with the instructor and TAs. Answers to questions on Piazza are expected within 1-3 workdays approximately.   No books are needed. 
+Lecture material will be pre-recorded and available asynchronousy. Course work can be done asychronouly. Students can watch live lectures over zoom -- attendance is optional. There will be  office hours with the instructor and the TAs remotely over zoom. Zoom links, lecture notes, recorded videos, programming resources, and assignments are posted on Moodle. Piazza will be used for asynchronous Q &amp; A with the instructor and TAs. Answers to questions on Piazza are expected within 1-3 workdays approximately.   No books are needed. 
 <h2>Week-by-week outline (tentative)</h2>
   <p>Week 1: Introduction to Game Programming and Unity<br>
     Week 2: The Game Loop, Scene Modeling, C# scripting <em>(assignment 1 deadline)</em><br>
