--- a/index.html
+++ b/index.html
@@ -173,21 +173,19 @@ Associate Professor of Computer Science</strong><br>
                     interested in algorithms that generate 3D models of objects,
                     scenes, animations, and intelligently process 3D scans,
                     geometric data, collections of shapes, images, and video.
-                    His research is supported by NSF awards and donations from
-                    Adobe, Sony, and Dolby. He is currently an Associate Professor at the College of
+                    His research has been supported by grants from the National Science Foundation (NSF) and the European Research Council (ERC). He is currently an Associate Professor at the College of
                     Information and Computer Sciences at the University of
-                    Massachusetts Amherst (UMass Amherst), where he leads a
-                    group of students working on graphics+vision. He joined
-                    UMass Amherst in 2012. He was a postdoctoral researcher at
+                    Massachusetts Amherst, where he leads a
+                    group of students working on graphics+vision. He was a postdoctoral researcher at
                     Stanford University from 2010 to 2012. He obtained his PhD
                     from the University of Toronto in 2010. His <a href="degrees/KALOGERAKIS_PhD_THESIS.pdf">PhD thesis </a> introduced machine learning techniques for geometry processing.
-                    He has served as Area Chair multiple times in CVPR, ICCV, ECCV. He has also served on
+                    He has served as Area Chair multiple times in CVPR, ICCV, and ECCV. He has also served on
                     technical paper committees for SIGGRAPH,
                     SIGGRAPH ASIA, Eurographics, and the Symposium on Geometry
                     Processing. He  is an Associate Editor in the
                     Editorial Boards of IEEE Transactions on Pattern Analysis
                     and Machine Intelligence (TPAMI) and IEEE Transactions on
-                    Visualization &amp; Computer Graphics (TVCG). He is  co-chairing <a href="https://eg2024.cyens.org.cy/">Eurographics 2024</a> (Full Papers). He was listed as one of the <a href="https://www.aminer.cn/ai2000/2021/cg">100 most cited computer graphics scholars</a> in the world between 2010-2020 by the Tsinghua's
+                    Visualization &amp; Computer Graphics (TVCG). He   co-chaired <a href="https://eg2024.cyens.org.cy/">Eurographics 2024</a>. He was listed as one of the <a href="https://www.aminer.cn/ai2000/2021/cg">100 most cited computer graphics scholars</a> in the world between 2010-2020 by the Tsinghua's
                     AMiner academic network.</p>
                   <p>
 					  <span class="importantnote">
