--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@ Associate Professor of Computer Science</strong><br>
                   <p>
 					  <span class="importantnote">
 			      <strong>
-					If you are interested in applying to work with me, please first read  <a href="erc.html">here</a> before reaching out to me!
+					  I will be on absence of leave from UMass Amherst starting in January 2025.  I am not accepting new students, postdocs, or interns at UMass Amherst. 
+					<!--If you are interested in applying to work with me, please first read  <a href="erc.html">here</a> before reaching out to me!-->
 				  </strong>
 						  </span>
 				  </p>
