--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@ Associate Professor of Computer Science</strong><br>
                   <p>
 					  <span class="importantnote">
 			      <strong>
-					  I will be on absence of leave from UMass Amherst starting in January 2025.  I am not accepting new students, postdocs, or interns at UMass Amherst. 
-					<!--If you are interested in applying to work with me, please first read  <a href="erc.html">here</a> before reaching out to me!-->
+					  I will be on absence of leave from UMass Amherst starting in January 2025. I am moving to the <a href="https://www.ece.tuc.gr/en/news/item/new-pan-european-distinction-of-the-ece-school-of-the-technical-university-of-crete-for-the-second-year-in-a-row">Technical University of Crete with an ERC consolidator grant. </a><br>
+				  <!--If you are interested in applying to work with me, please first read  <a href="erc.html">here</a> before reaching out to me!-->
 				  </strong>
 						  </span>
 				  </p>
@@ -2576,7 +2576,8 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
                   Elsevier Computer &amp; Graphics (2018-2021)&nbsp; </p>
 				  
                 <p><strong>I served as Program Commitee Member or Area Chair in the following conferences:</strong> <br>
-				  CVPR 2024  (area chair), 2023 (area chair), 2021 (area chair)<br>
+                NIPS 2024 (area chair)<br>
+				  CVPR 2024  (area chair), 2023 (area chair), 2021 (area chair) <br>
                   ICCV 2023 (area chair), 2021 (area chair)<br>                  				  
 				  ECCV 2024 (area chair), 2022 (area chair)<br>
                   Siggraph 2020 (technical papers COI coodinator)<br>
